# foundry-forum

./: .gitignore  Cargo.toml  README.md  build.rs  test.db
common/: Cargo.toml
db/: Cargo.toml
db/migrations/: 20231108213118_init.sql
db/src/: article.rs  error.rs  lib.rs  user.rs
main/: Cargo.toml
main/src/: main.rs
server/: Cargo.toml  build.rs
server/assets/scripts/: index.ts  lexical_editor.ts  quill.ts
server/assets/scripts/utils/: index.js  rich_text.ts
server/assets/styles/: lexical.css
server/src/: asset_cache.rs  auth.rs  base_template.rs  lib.rs  static_file_handler.rs
server/src/routes/: mod.rs
server/static/: styles.css
server/templates/: _base.html  about.html  draft.html  index.html  lexical.html  login.html  messages.html  navbar.html  register.html
