[workspace]
members = [
     "server",
    "common",
    "db",
    "main"]

[workspace.package]
name = "foundry-forum" # the name of the package
edition = "2021"
version = "0.1.0"    # the current version, obeying semver
author = "Emil Lindfors"
description = "Forum Software"

[workspace.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0.75"
serde = "1.0.195"