[package]
name = "db"
edition.workspace = true
version.workspace = true
author.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.7.3", features = ["sqlite",  "time", "runtime-tokio"] }
serde = { workspace = "true" }
anyhow ={ workspace = "true" }
dotenvy = "0.15.7"
