[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { workspace = true }
server = { path = "../server" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
