[package]
name = "server"
edition.workspace = true
version.workspace = true
author.workspace = true
description.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common" }
db = {path = "../db" }
axum = "0.7.3"
tokio = { workspace = "true" }
anyhow = { workspace = "true" }
tracing = { workspace = "true" }
serde = { workspace = "true" }
axum-login = {git = "https://github.com/maxcountryman/axum-login"}
axum-messages = "0.3.0"
tower-sessions = { version = "0.10.0", default-features = false }
tower-sessions-sqlx-store = { version = "0.10.0", features = ["sqlite"] }
axum-cc = { git = "https://github.com/robertwayne/axum-cc", branch = "main" }
bytes = "1.5.0"
async-compression = { version = "0.4.6", features = ["brotli", "tokio"] }
password-auth = "1.0.0"
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.5", default-features = false, features = [
    "cors",
    "compression-br",
] }
time = "0.3.30"
axum-htmx = "0.5.0"
minijinja = { git = "https://github.com/mitsuhiko/minijinja", branch = "main", features = [
    "loader",
] }
serde_json = "1.0.114"

